# ramifier

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
contrib/: config.example.yaml
ramifier/: backup.py  config.py  daemon.py  lock.py  log.py  main.py  runtime.py  state.py  target.py  utils.py
src/ramifier/: backup.py  config.py  daemon.py  dynamic_interval.py  global_settings.py  interval.py  lock.py  log.py  main.py  runtime.py  state.py  target.py  utils.py
